# AINativeBook

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  ENHANCED_CONTENT_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  PERSONALIZATION_QUICKSTART.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_9_COMPLETION_SUMMARY.md  PRODUCTION_FIX_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_ENHANCED_CONTENT.md  QUICK_DEPLOY.md  QUICK_START.md  RAILWAY_CRITICAL_FIX.md  RAILWAY_DEBUG.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_COMPLETE.md  RAILWAY_DEPLOYMENT_STATUS.md  RAILWAY_FIX_CHECKLIST.md  RAILWAY_FIX_COMPLETE.md  RAILWAY_FIX_ROOT_DIRECTORY.md  RAILWAY_NEXT_STEPS.md  RAILWAY_SETUP_GUIDE.md  RAILWAY_SIMPLE_GUIDE.md  RAILWAY_STATUS_CHECK.md  README.md  README_ENHANCED_CONTENT.md  SECURITY_INCIDENT_2026-02-21.md  SPECS_CLEANUP_SUMMARY.md  (+19 more)
intellistack/: .env.example  (+3 more)
intellistack/backend/: .dockerignore  .env.production  .env.railway.example  DATABASE_SETUP.md  Dockerfile  RUN_BACKEND.bat  alembic.ini  fix_uuid_to_varchar.sql  pyproject.toml  railway.json  railway.toml  requirements.txt  seed_simple.py  start_server.py
intellistack/backend/alembic/: env.py
intellistack/backend/alembic/versions/: 001_add_chatkit_tables.py  20260209_2033_2df1e27640d0_initial_migration.py  20260210_0001_add_oauth_and_password_reset_tables.py  20260217_enhanced_content_structure.py  20260218_add_personalization_profiles.py
intellistack/backend/api/: index.py
intellistack/backend/src/: __init__.py  main.py
intellistack/backend/src/ai/: __init__.py
intellistack/backend/src/ai/chatkit/: __init__.py  agent.py  context.py  models.py  rate_limiter.py  routes.py  server.py  store.py
intellistack/backend/src/ai/code_execution/: pyodide_integration.py  routes.py  service.py
intellistack/backend/src/ai/content/: summary_service.py
intellistack/backend/src/config/: __init__.py  logging.py  settings.py
intellistack/backend/src/scripts/: seed_data.py  translate_content.py
intellistack/backend/src/shared/: __init__.py  database.py  exceptions.py  middleware.py  utils.py
(+516 files in other folders)
